clusters/apps/default/expenses-receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: expenses-receiver
  name: expenses-receiver
  namespace: default
spec:
  type: NodePort
  selector:
    app: expenses-receiver
  ports:
    - nodePort: 30005
      port: 3000
      protocol: TCP
      targetPort: 3000
