clusters/apps/default/expenses-receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenses-receiver
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: true
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: public-k8s.cristobalszk.dev
      http:
        paths:
          - path: /expenses-receiver(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: expenses-receiver
                port:
                  number: 3000
